spec/unit/compile_errors/fixtures/03_auto_increment_on_string.cr
# expect: auto_increment requires Int32 or Int64
require "../../../../src/prostore"

class M < Prostore::Model
  field 1, :id, String, primary: true, auto_increment: true
end
